[package]
name = "lbtas"
version = "2.0.0"
edition = "2021"
authors = ["Network Theory Applied Research Institute"]
description = "Leveson-Based Trade Assessment Scale - A rating system for digital commerce"
license = "AGPL-3.0"
repository = "https://github.com/NTARI-OpenCoreLab/Leveson-Based-Trade-Assessment-Scale"
keywords = ["rating", "assessment", "leveson", "digital-commerce", "ntari"]
categories = ["command-line-utilities"]

[[bin]]
name = "lbtas"
path = "lbtas.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
